<resources>
    <string name="app_name">Calculator</string>

    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_negative">-/+</string>
    <string name="_dot">.</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_multiply">*</string>
    <string name="_divide">÷</string>
    <string name="_is">=</string>
    <string name="_proc">%</string>
    <string name="_clear">C</string>
    <string name="_root">√</string>
    <string name="btnBackName">Назад</string>
    <string name="SettingsThemeName">Темная тема</string>
    <string name="btnSettingsName">Настройки</string>


    <dimen name="button_text_size">40sp</dimen>
    <dimen name="button_text_size_landscape">30sp</dimen>
    <dimen name="output_text_size">50sp</dimen>
    <dimen name="output_text_size_land">40sp</dimen>
    <dimen name="history_text_size">20sp</dimen>
    <dimen name="button_margin">1dp</dimen>

</resources>