<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    //history text

    <TextView
        android:id="@+id/historyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:scrollbars="vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="@dimen/history_text_size" />

    //output text
    <TextView
        android:id="@+id/outputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="@dimen/output_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_clear"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_root"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_back"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_divide"
            android:textSize="@dimen/button_text_size"/>

    </LinearLayout>

    //1-3
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/_multiply"
            android:textSize="@dimen/button_text_size"/>

    </LinearLayout>

    //4-6
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_4"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_5"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_6"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_minus"
            android:textSize="@dimen/button_text_size"/>

    </LinearLayout>

    //7-9, *
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_7"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_8"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_9"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_plus"
            android:textSize="@dimen/button_text_size"/>

    </LinearLayout>

    //0, -/+, ., =
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_negative"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_0"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_dot"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_is"
            android:textSize="@dimen/button_text_size"/>

    </LinearLayout>


</LinearLayout>